[package]
name = "csv2xlsx"
version = "1.1.1"
authors = ["Giacomo Rizzi <gufoes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xlsxwriter = "0.6"
csv = "1.1"
structopt = {version="0.3"}
calamine = "0.23"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
